Add route to list mailboxes
